[package]
name = "advent2018"
version = "0.1.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
linked-list = "0"
advent_lib = { version = "0.2.0", path = "../advent_lib_old" }
itertools = "0.10.5"
counter = "0.5.7"
